# ddc-macos-rs

./: .gitignore  Cargo.toml  README.md  ci.nix  flake.nix
.github/workflows/: build.yml  ddc-macos-rs.yml
src/: lib.rs  monitor.rs
src/iokit/: errors.rs  io2c_interface.rs
tests/: integration_tests.rs
