[package]
name = "ddc-macos"
version = "0.2.1" # keep in sync with html_root_url
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
edition = "2018"
description = "DDC/CI monitor control on MacOS"
documentation = "https://docs.rs/ddc-macos"
readme = "README.md"
repository = "https://github.com/haimgel/ddc-macos-rs"
license = "MIT"
keywords = ["ddc", "mccs", "vcp", "vesa", "macos"]
categories = ["hardware-support", "os::macos-apis"]

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
targets = ["x86_64-apple-darwin", "i686-apple-darwin", "aarch64-apple-darwin"]

[dependencies]
core-foundation = "^0.9.1"
core-foundation-sys = "^0.8.1"
core-graphics = "^0.22.1"
ddc = "^0.2.0"
io-kit-sys = "^0.2.0"
mach2 = "^0.4.0"
thiserror = "^1"

[badges]
maintenance = { status = "actively-developed" }
